Phase5/negative_tests/prog6.dlp
//Missing '(' ')'
if 3 > 2 {
    break;
}
return 0;